--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </style>
 </head>
 <body onclick="playAudio()">
-    Нажми в любом месте, чтобы включить звук!
+    Иди нахуй
     
     <script>
-        let audio = new Audio("https://files.catbox.moe/abc123.mp3"); // Замени на свою ссылку
+        let audio = new Audio("https://files.catbox.moe/4pa0hu.mp3"); // Замени на свою ссылку
         
         function playAudio() {
             audio.play();
