--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: dark blue;
-            color: yellow;
+            background-color: white;
+            color: black;
             font-size: 24px;
             text-align: center;
             cursor: pointer;
